--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
+body {
+    background-color:rgb(65, 65, 65);
+    color:rgb(255, 255, 255);
+    font-family: "Open Sans", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
+}
 
+button{
+    background-color: rgb(136, 135, 135);
+    color: rgb(255, 255, 255);
+    font-family: "Open Sans", sans-serif;
+}
